--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/splide.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="bg-shadow">
         <div class="container-xl py-5 px-4">
@@ -57,7 +58,8 @@
             <div class="row">
                 <div class="col-xl-6 px-0">
                     <div>
-                        <img src="img/image-01.jpg" class="w-100" alt="">
+                        <a data-fancybox href="img/image-01.jpg" data-caption="A stunning view" >
+                            <img src="img/image-01.jpg" class="w-100" alt="" alt="Thumbnail"></a>
                     </div>
                 </div>
                 <div class="col-xl-6 py-5 bg-white">
@@ -96,7 +98,8 @@
                 </div>
                 <div class="col-xl-4 px-0">
                     <div>
-                        <img src="img/image-02.jpg" class="w-100" alt="">
+                        <a data-fancybox href="img/image-02.jpg" data-caption="A stunning view" >
+                            <img src="img/image-02.jpg" class="w-100" alt="" alt="Thumbnail"></a>
                     </div>
                 </div>
             </div>
@@ -107,7 +110,8 @@
                 <div class="row me-3">
                     <div class="col-xl-4  px-xl-0">
                         <div class="ps-xl-0 ps-4">
-                            <img src="img/image-03.jpg" class="w-100" alt="">
+                            <a data-fancybox href="img/image-03.jpg" data-caption="A stunning view" >
+                                <img src="img/image-03.jpg" class="w-100" alt="" alt="Thumbnail"></a>
                         </div>
                     </div>
                     <div class="col-xl-4 ps-xl-0 ps-5 py-3 text-white text-center">
@@ -249,7 +253,8 @@
                         </div>
                         <div class="col-xl-4 col-6 py-xl-5">
                             <div class="small">
-                                Lorem ipsum dolor sit <br> amet consectetur adipisicing <br> elit. Eius quia repudiandae rerum <br>
+                                Lorem ipsum dolor sit <br> amet consectetur adipisicing <br> elit. Eius quia repudiandae
+                                rerum <br>
                                 dolores, magni fugiat.
                             </div>
                         </div>
@@ -258,13 +263,12 @@
             </div>
         </div>
 
-        
-
-
-
-
-
-        
+        <script src="js/fancybox.js"></script>
+        <script>
+            Fancybox.bind("[data-fancybox]", {
+                'animated' : true,
+            });
+        </script>
     </div>
 </body>
 
